test/trivial/lydia/octalBad.good
octalBad.chpl:2: syntax error: syntax error near 'o87'
